--- a/spellnote.css
+++ b/spellnote.css
@@ -16,19 +16,26 @@
 
 .sn-editor-panel .sn-editor,
 .sn-editor-panel .sn-code-editor{
-    position: absolute;
     padding: 10px;
-    left: 0px;
-    top: 0px;
     width: 100%;
-    height: 100%;
+    min-height: 300px;
     margin: 0px;
     outline: none;
     box-sizing:border-box;
     -moz-box-sizing:border-box; /* Firefox */
     -webkit-box-sizing:border-box; /* Safari */
     word-wrap: break-word;
-    overflow: auto;
+}
+
+.sn-editor-panel .sn-editor{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.sn-editor-panel .sn-code-editor{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 100%;
 }
 
 .sn-editor-panel .sn-editor p{
@@ -42,6 +49,7 @@
 }
 
 .sn-unit-panel .sn-unit{
+    position: relative;
     margin: 5px;
     padding: 5px;
     outline: none;
@@ -100,4 +108,22 @@
 
 .sn-unit-panel select option{
     border-radius: 5px;
+}
+
+.sn-unit-expanding-list{
+    position: fixed;
+    background-color: #FFFFFF;
+    box-shadow: 1px 1px #CCCCCC;
+    border-radius: 5px;
+    z-index: 99;
+}
+
+.sn-unit-expanding-list-item{
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 2px;
+}
+
+.sn-unit-expanding-list-item:hover{
+    background-color: #E6E6E6;
 }
