--- a/spellnote.css
+++ b/spellnote.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'font-awesome-for-spellnote';
-  src: url('./font/font-awesome-for-spellnote.eot?13833932');
-  src: url('./font/font-awesome-for-spellnote.eot?13833932#iefix') format('embedded-opentype'),
-       url('./font/font-awesome-for-spellnote.woff2?13833932') format('woff2'),
-       url('./font/font-awesome-for-spellnote.woff?13833932') format('woff'),
-       url('./font/font-awesome-for-spellnote.ttf?13833932') format('truetype'),
-       url('./font/font-awesome-for-spellnote.svg?13833932#font-awesome-for-spellnote') format('svg');
+  src: url('./font/font-awesome-for-spellnote.eot?6123968');
+  src: url('./font/font-awesome-for-spellnote.eot?6123968#iefix') format('embedded-opentype'),
+       url('./font/font-awesome-for-spellnote.woff2?6123968') format('woff2'),
+       url('./font/font-awesome-for-spellnote.woff?6123968') format('woff'),
+       url('./font/font-awesome-for-spellnote.ttf?6123968') format('truetype'),
+       url('./font/font-awesome-for-spellnote.svg?6123968#font-awesome-for-spellnote') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'font-awesome-for-spellnote';
-    src: url('./font/font-awesome-for-spellnote.svg?13833932#default') format('svg');
+    src: url('../font/font-awesome-for-spellnote.svg?6123968#default') format('svg');
   }
 }
 */
@@ -59,15 +59,27 @@
 .icon-italic:before { content: '\e801'; } /* '' */
 .icon-text-height:before { content: '\e802'; } /* '' */
 .icon-font:before { content: '\e803'; } /* '' */
-.icon-font-reverse:before { content: '\e803'; color: #FFFFFF; background-color: #000000; } /* '' */
+.icon-font-reverse:before { content: '\e803'; color: #FFFFFF; background-color: #000000;} /* '' */
 .icon-music:before { content: '\e804'; } /* '' */
 .icon-video:before { content: '\e805'; } /* '' */
 .icon-picture:before { content: '\e806'; } /* '' */
 .icon-cw:before { content: '\e807'; } /* '' */
 .icon-ccw:before { content: '\e808'; } /* '' */
+.icon-link:before { content: '\e809'; } /* '' */
+.icon-left-open:before { content: '\e80a'; } /* '' */
+.icon-left-big:before { content: '\e80b'; } /* '' */
+.icon-right-open:before { content: '\e80c'; } /* '' */
+.icon-right-big:before { content: '\e80d'; } /* '' */
+.icon-attention:before { content: '\e80e'; } /* '' */
+.icon-attention-circled:before { content: '\e80f'; } /* '' */
+.icon-cancel-circled:before { content: '\e810'; } /* '' */
+.icon-cancel:before { content: '\e811'; } /* '' */
 .icon-strike:before { content: '\f0cc'; } /* '' */
 .icon-underline:before { content: '\f0cd'; } /* '' */
+.icon-quote-left:before { content: '\f10d'; } /* '' */
 .icon-code:before { content: '\f121'; } /* '' */
+.icon-unlink:before { content: '\f127'; } /* '' */
+.icon-attention-alt:before { content: '\f12a'; } /* '' */
 .icon-eraser:before { content: '\f12d'; } /* '' */
 
 /*---------------------------------------------------------------------------------------------*/
@@ -82,7 +94,7 @@
     border-radius: 5px 5px 0px 0px;
     border: 1px solid #CCCCCC;
     border-bottom: none;
-    z-index: 999;
+    z-index: 9999;
     background-color: #FFFFFF;
 }
 
@@ -193,7 +205,7 @@
     background-color: #FFFFFF;
     box-shadow: 1px 1px #CCCCCC;
     border-radius: 5px;
-    z-index: 99;
+    z-index: 10000;
 }
 
 .sn-unit-expanding-list-item{
