--- a/spellnote.css
+++ b/spellnote.css
@@ -159,9 +159,9 @@
 .sn-unit-panel .sn-unit{
     position: relative;
     display: inline-block;
+    padding: 0px;
     height: 30px;
     width: 30px;
-    line-height: 30px;
     text-align: center;
     font-size: 14px;
     margin: 5px;
